--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,4 +1,6 @@
 
+
+/*
 // Body
 $body-bg: #f5f8fa;
 
@@ -6,3 +8,4 @@ $body-bg: #f5f8fa;
 $font-family-sans-serif: "Raleway", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
+*/
