--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,10 +1,13 @@
 
 // Fonts
+/*
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
+*/
 
 // Variables
 @import "variables";
 
+/*
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
@@ -12,3 +15,7 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+*/
+
+// General Style
+@import "style";
