--- a/resources/assets/sass/_style.scss
+++ b/resources/assets/sass/_style.scss
@@ -1,11 +1,17 @@
-img {
-	margin: 15px 10px 0 !important;
+section {
+	padding: 0;
 }
 
+img {
+	margin: 0;
+	border: none;
+	border-radius: 5px;
+}
+/*
 a {
 	color: #dd5566 !important;
 }
-
+*/
 .lista{
 	li {
 		font-size: 2rem;
@@ -14,3 +20,18 @@ a {
 /*.claro li a, .claro a {
 	
 }*/
+
+.vivala {
+	background: linear-gradient(to bottom right, $vivala-laranja-1, $vivala-laranja-2);
+}
+
+.iphone {
+	//width: 200px;
+	width: 550px;
+	// Site de referência das box-shadow:
+	// https://codepen.io/sdthornton/pen/wBZdXq
+
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+	//box-shadow: 0 19px 38px rgba(0,0,0,1), 0 15px 12px rgba(0,0,0,1) !important;
+	//box-shadow: 0 38px 76px rgba(0,0,0,1), 0 30px 24px rgba(0,0,0,1) !important;
+}
