--- a/resources/assets/sass/_style.scss
+++ b/resources/assets/sass/_style.scss
@@ -25,6 +25,10 @@ a {
 	background: linear-gradient(to bottom right, $vivala-laranja-1, $vivala-laranja-2);
 }
 
+.tesseract {
+	background: linear-gradient(to bottom right, $tesseract-branco, $tesseract-preto);
+}
+
 .iphone {
 	//width: 200px;
 	width: 550px;
