--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -2,6 +2,8 @@ $vivala-laranja-1: #facfb7;
 $vivala-laranja-2: #f16f2b; 
 $vivala-laranja: #f16f2b;
 
+$tesseract-branco: white;
+$tesseract-preto: black;
 /*
 // Body
 $body-bg: #f5f8fa;
