--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,9 +1,15 @@
-$vivala-laranja-1: #facfb7;
-$vivala-laranja-2: #f16f2b; 
-$vivala-laranja: #f16f2b;
+$boitata-1: #9c1420;
+$boitata-2: #000000;
+$boitata-3: black;
 
-$tesseract-branco: white;
-$tesseract-preto: black;
+$vivala-1: #facfb7;
+$vivala-2: #f16f2b;
+
+$tesseract-1: white;
+$tesseract-2: black;
+
+$alabamaot-1: white;
+$alabamaot-2: #051122;
 /*
 // Body
 $body-bg: #f5f8fa;
