--- a/resources/assets/sass/_style.scss
+++ b/resources/assets/sass/_style.scss
@@ -8,7 +8,7 @@
 }
 
 img {
-	margin: auto !important;
+	margin: 0 !important;
 	border: none;
 	border-radius: 5px;
 }
@@ -33,7 +33,24 @@ section {
 		display: flex !important;
 		.quadrado {
 			display: flex !important;
+			flex-direction: column !important;
+			flex-wrap: wrap !important;
+			justify-content: center !important;
+			align-items: center !important;
 			width: 100%;
+
+			a {
+				text-decoration: none;
+
+				h1 {
+					font-size: 4rem;
+					font-family: ubuntu;
+					margin: 0 0 3rem !important;
+					display: block;
+					color: $alabamaot-2;
+					text-decoration: none;
+				}				
+			}
 		}
 	}
 }
