fonts e começo do header

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,66 @@
-/*
-@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
-*/
+/*==============================================================================
+  Biblioteca de FONTES
+==============================================================================*/
+
+/* EdmondSans - Regular */
+
+@font-face {
+  font-family: 'EdmondSans Regular';
+  src: url(/fonts/edmondsans-regular.eot?7c32fd98bb711c06ab27b0417df921e0);
+  src: url(/fonts/edmondsans-regular.eot?7c32fd98bb711c06ab27b0417df921e0) format("embedded-opentype"), url(/fonts/edmondsans-regular.woff?a26524e061a643a82633c8298ab1ca87) format("woff"), url(/fonts/edmondsans-regular.ttf?03307ac01d5041fbebfe3b0c6fbe2577) format("truetype"), url(/fonts/edmondsans-regular.svg?77892e547a8b02054fed1eb04aa85787) format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* EdmondSans - Medium */
+
+@font-face {
+  font-family: 'EdmondSans Medium';
+  src: url(/fonts/edmondsans-medium.eot?520c7b44c9d974e92cb9edd45c83826a);
+  src: url(/fonts/edmondsans-medium.eot?520c7b44c9d974e92cb9edd45c83826a) format("embedded-opentype"), url(/fonts/edmondsans-medium.woff?662545f97c8d1f802469e2260e7a841c) format("woff"), url(/fonts/edmondsans-medium.ttf?c8597948aefb1479909758ad5e42469e) format("truetype"), url(/fonts/edmondsans-medium.svg?055150d7003cdb061e6120bab3b8cae5) format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* EdmondSans - Bold */
+
+@font-face {
+  font-family: 'EdmondSans Bold';
+  src: url(/fonts/edmondsans-bold.eot?35a8e751336b842b3e6352990a421b45);
+  src: url(/fonts/edmondsans-bold.eot?35a8e751336b842b3e6352990a421b45) format("embedded-opentype"), url(/fonts/edmondsans-bold.woff?7d9fbec191ac0ee72db2dbcf619e0b83) format("woff"), url(/fonts/edmondsans-bold.ttf?435d340b3711525c2e603693a49cda67) format("truetype"), url(/fonts/edmondsans-bold.svg?a9277a9a1b3dfea02acf166be192bad1) format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Jaapokki - Regular */
+
+@font-face {
+  font-family: 'Jaapokki Regular';
+  src: url(/fonts/jaapokki-regular.eot?6f0511e44ff6871bee043745fb5bceeb);
+  src: url(/fonts/jaapokki-regular.eot?6f0511e44ff6871bee043745fb5bceeb) format("embedded-opentype"), url(/fonts/jaapokki-regular.woff?829420b82ea237d1c3c1638fd58b2964) format("woff"), url(/fonts/jaapokki-regular.ttf?e269265e3d9716bd97a0d7503d3428ca) format("truetype"), url(/fonts/jaapokki-regular.svg?148ff044dd25a7805d17d2edb81b8539) format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Jaapokki - Enhance */
+
+@font-face {
+  font-family: 'Jaapokki Enhance';
+  src: url(/fonts/jaapokki-enhance.eot?53f76394e875daf211d6a172afed0f07);
+  src: url(/fonts/jaapokki-enhance.eot?53f76394e875daf211d6a172afed0f07) format("embedded-opentype"), url(/fonts/jaapokki-enhance.woff?5fe913f4d687c94e583de2a2aa44e5aa) format("woff"), url(/fonts/jaapokki-enhance.ttf?459dbabc0029441c415674885bfb9172) format("truetype"), url(/fonts/jaapokki-enhance.svg?15f12bbb0a724d729fecda73ebaeecd4) format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Jaapokki - Subtract */
+
+@font-face {
+  font-family: 'Jaapokki Subtract';
+  src: url(/fonts/jaapokki-subtract.eot?952d855a1617528e5f3abfdbd186f99b);
+  src: url(/fonts/jaapokki-subtract.eot?952d855a1617528e5f3abfdbd186f99b) format("embedded-opentype"), url(/fonts/jaapokki-subtract.woff?a34484e451f48ba907f138318c3a5073) format("woff"), url(/fonts/jaapokki-subtract.ttf?928411e042d0eebf627a4613ece16672) format("truetype"), url(/fonts/jaapokki-subtract.svg?ed51358711f3fe4ff2c8fbfb3185f6f2) format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 
 /*
 // Body
@@ -21,6 +81,22 @@ $line-height-base: 1.6;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 */
+
+body {
+  position: relative;
+}
+
+.header {
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding: 1rem 0 0 1rem;
+}
+
+.header h1 {
+  font-family: "EdmondSans Regular", serif, sans-serif;
+  margin: 0 0 2rem;
+}
 
 /*section {
 	padding: 0;
