--- a/public/css/app.css
+++ b/public/css/app.css
@@ -94,6 +94,12 @@ body {
   z-index: 2000;
 }
 
+@media (max-width: 991.98px) {
+  .header {
+    padding: 0.5rem 0 0 0.5rem;
+  }
+}
+
 .header h1 {
   font-family: "Jaapokki Regular", serif, sans-serif;
   margin: 0 0 1rem;
@@ -134,6 +140,8 @@ body {
 .header a:visited i,
 .header a:hover i,
 .header a:active i {
+  width: 36px;
+  text-align: center;
   margin-right: 0.5rem;
 }
 
@@ -179,6 +187,30 @@ body {
 
   .header .viuva {
     display: block;
+  }
+}
+
+.img-logo {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 1rem 1rem 0 0;
+  z-index: 2000;
+}
+
+@media (max-width: 991.98px) {
+  .img-logo {
+    padding: 0.5rem 0.5rem 0 0;
+  }
+}
+
+.img-logo img {
+  width: 80px;
+}
+
+@media (max-width: 991.98px) {
+  .img-logo img {
+    width: 50px;
   }
 }
 
