--- a/resources/assets/sass/_header.scss
+++ b/resources/assets/sass/_header.scss
@@ -7,6 +7,7 @@ body {
 	left: 0;
 	top: 0;
 	padding: 1rem 0 0 1rem;
+	@media (max-width: 991.98px) { padding: 0.5rem 0 0 0.5rem; }
 	z-index: 2000;
 
 	h1 {
@@ -31,6 +32,8 @@ body {
 		}
 
 		i {
+			width: 36px;
+			text-align: center;
 			margin-right: 0.5rem;
 		}
 
@@ -57,5 +60,19 @@ body {
 		.viuva {
 			display: block;
 		}
+	}
+}
+
+.img-logo {
+	position: absolute;
+	right: 0;
+	top: 0;
+	padding: 1rem 1rem 0 0;
+	z-index: 2000;
+	@media (max-width: 991.98px) { padding: 0.5rem 0.5rem 0 0; }
+
+	img {
+		width: 80px;
+		@media (max-width: 991.98px) { width: 50px; } 
 	}
 }
