--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,19 +1,32 @@
+$vivala-1: #facfb7;
+$vivala-2: #f16f2b;
+
 $boitata-1: #9c1420;
 $boitata-2: #000000;
 $boitata-3: black;
 
-$vivala-1: #facfb7;
-$vivala-2: #f16f2b;
+$acordo-rapido-1: #b5da8b;
+$acordo-rapido-2: #0099e6;
+//$acordo-rapido-1: #97CA5B;
+//$acordo-rapido-2: #006DA5;
+
+$seus-direitos-1: #0086b3;
+$seus-direitos-2: #0086b3;
 
 $tesseract-1: white;
-$tesseract-2: black;
+$tesseract-2: #282828;
+
+$shanti-1: #F86B37;
+$shanti-2: white;
+$shanti-3: #ac3956;
 
 $alabamaot-1: white;
-$alabamaot-2: #051122;
-/*
-// Body
-$body-bg: #f5f8fa;
+$alabamaot-2: #1A3418;
 
+// Body
+$body-bg: #f2f2f2;
+
+/*
 // Typography
 $font-family-sans-serif: "Raleway", sans-serif;
 $font-size-base: 0.9rem;
