--- a/resources/assets/sass/_content.scss
+++ b/resources/assets/sass/_content.scss
@@ -80,6 +80,12 @@ section {
 	}
 }
 
+.abenepi2 {
+	section {
+		background: radial-gradient($abenepi2-1, $abenepi2-2);
+	}
+}
+
 .tesseract {
 	section {
 		background: radial-gradient($tesseract-1, $tesseract-2);
