--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -13,6 +13,9 @@ $acordo-rapido-2: #0099e6;
 $seus-direitos-1: #0086b3;
 $seus-direitos-2: #0086b3;
 
+$abenepi2-1: white;
+$abenepi2-2: #972038;
+
 $tesseract-1: white;
 $tesseract-2: #282828;
 
