--- a/resources/assets/sass/_header.scss
+++ b/resources/assets/sass/_header.scss
@@ -53,12 +53,12 @@ body {
 		display: none;
 	}
 
-	#hrefLink {
-		p {
+	.hrefLink {
+		.showLink {
 			text-decoration-color: #FF6147;
 		}
 
-		i {
+		.iconLink {
 			color: #FF6147;
 		}
 	}
@@ -70,6 +70,65 @@ body {
 
 		.viuva {
 			display: block;
+		}
+
+		.desktopLink {
+			display: none !important;
+		}
+	}
+}
+
+.mobileLink {
+	display: none !important;
+}
+
+@media (max-width: 991.98px) {
+	.mobileLink {
+		display: block !important;
+		position: absolute;
+		left: 0;
+		bottom: 0;
+		padding: 0 0 0.5rem 0.5rem;
+		z-index: 2000;
+
+		.hrefLink {
+			.showLink {
+				text-decoration-color: #FF6147;
+			}
+
+			.iconLink {
+				color: #FF6147;
+			}
+		} 
+
+		a , a:link, a:visited, a:hover, a:active {
+			display: block;	
+			color: black;
+			text-decoration: none;
+
+			i, p {
+				display: inline-block;
+			}
+
+			i {
+				width: 36px;
+				text-align: center;
+				margin-right: 0.5rem;
+			}
+
+			p {			
+				text-decoration: underline;
+				font-family: $font-family-edmondsans-regular;
+				font-size: 1.5rem;
+				margin: 0;
+				color: black;
+			}
+
+			&:hover, &:active {
+				i, p {
+					color: gray;				
+				}
+			}
 		}
 	}
 }
@@ -93,6 +152,9 @@ body {
 	left: 0;
 	bottom: 0;
 	padding: 0 0 1rem 1rem;
-	@media (max-width: 991.98px) { padding: 0 0 0.5rem 0.5rem; }
+	@media (max-width: 991.98px) {
+		display: none;
+		padding: 0 0 0.5rem 0.5rem;
+	}
 	z-index: 2000;
 }
